--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -27,14 +27,14 @@
   padding-top: 60px;
 }
 .main .icon {
-  width: 34px;
+  width: 74px;
 }
 .main h3 {
   font-size: 32px;
   line-height: 40px;
   font-weight: bold;
   color: #202123;
-  margin: 16px 0 40px;
+  margin: 34px 0 40px;
 }
 .main form {
   display: flex;
@@ -64,4 +64,6 @@
 .main .result {
   font-weight: bold;
   margin-top: 40px;
+  margin-left: 250px;
+  margin-right: 250px;
 }
